added: results text | fixed: scripts

--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 02 Dec 2024 08:22:12 PM UTC
+%% Wed 04 Dec 2024 06:17:47 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -18,110 +18,122 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.930)--(15.447,2.930);
+\draw[gp path] (2.424,2.848)--(15.447,2.848);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.930)--(2.604,2.930);
-\draw[gp path] (15.447,2.930)--(15.267,2.930);
-\node[gp node right] at (2.240,2.930) {$1.8\times10^{11}$};
+\draw[gp path] (2.424,2.848)--(2.604,2.848);
+\draw[gp path] (15.447,2.848)--(15.267,2.848);
+\node[gp node right] at (2.240,2.848) {$1.8\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.835)--(15.447,3.835);
+\draw[gp path] (2.424,3.670)--(15.447,3.670);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.835)--(2.604,3.835);
-\draw[gp path] (15.447,3.835)--(15.267,3.835);
-\node[gp node right] at (2.240,3.835) {$1.82\times10^{11}$};
+\draw[gp path] (2.424,3.670)--(2.604,3.670);
+\draw[gp path] (15.447,3.670)--(15.267,3.670);
+\node[gp node right] at (2.240,3.670) {$1.82\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.740)--(15.447,4.740);
+\draw[gp path] (2.424,4.493)--(15.447,4.493);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.740)--(2.604,4.740);
-\draw[gp path] (15.447,4.740)--(15.267,4.740);
-\node[gp node right] at (2.240,4.740) {$1.84\times10^{11}$};
+\draw[gp path] (2.424,4.493)--(2.604,4.493);
+\draw[gp path] (15.447,4.493)--(15.267,4.493);
+\node[gp node right] at (2.240,4.493) {$1.84\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.645)--(15.447,5.645);
+\draw[gp path] (2.424,5.316)--(15.447,5.316);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.645)--(2.604,5.645);
-\draw[gp path] (15.447,5.645)--(15.267,5.645);
-\node[gp node right] at (2.240,5.645) {$1.86\times10^{11}$};
+\draw[gp path] (2.424,5.316)--(2.604,5.316);
+\draw[gp path] (15.447,5.316)--(15.267,5.316);
+\node[gp node right] at (2.240,5.316) {$1.86\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.550)--(15.447,6.550);
+\draw[gp path] (2.424,6.139)--(15.447,6.139);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.550)--(2.604,6.550);
-\draw[gp path] (15.447,6.550)--(15.267,6.550);
-\node[gp node right] at (2.240,6.550) {$1.88\times10^{11}$};
+\draw[gp path] (2.424,6.139)--(2.604,6.139);
+\draw[gp path] (15.447,6.139)--(15.267,6.139);
+\node[gp node right] at (2.240,6.139) {$1.88\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.455)--(15.447,7.455);
+\draw[gp path] (2.424,6.961)--(15.447,6.961);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.455)--(2.604,7.455);
-\draw[gp path] (15.447,7.455)--(15.267,7.455);
-\node[gp node right] at (2.240,7.455) {$1.9\times10^{11}$};
+\draw[gp path] (2.424,6.961)--(2.604,6.961);
+\draw[gp path] (15.447,6.961)--(15.267,6.961);
+\node[gp node right] at (2.240,6.961) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.360)--(15.447,8.360);
+\draw[gp path] (2.424,7.784)--(15.447,7.784);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.360)--(2.604,8.360);
-\draw[gp path] (15.447,8.360)--(15.267,8.360);
-\node[gp node right] at (2.240,8.360) {$1.92\times10^{11}$};
+\draw[gp path] (2.424,7.784)--(2.604,7.784);
+\draw[gp path] (15.447,7.784)--(15.267,7.784);
+\node[gp node right] at (2.240,7.784) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.265)--(15.447,9.265);
+\draw[gp path] (2.424,8.607)--(15.447,8.607);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.265)--(2.604,9.265);
-\draw[gp path] (15.447,9.265)--(15.267,9.265);
-\node[gp node right] at (2.240,9.265) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,8.607)--(2.604,8.607);
+\draw[gp path] (15.447,8.607)--(15.267,8.607);
+\node[gp node right] at (2.240,8.607) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.170)--(15.447,10.170);
+\draw[gp path] (2.424,9.430)--(15.447,9.430);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.170)--(2.604,10.170);
-\draw[gp path] (15.447,10.170)--(15.267,10.170);
-\node[gp node right] at (2.240,10.170) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,9.430)--(2.604,9.430);
+\draw[gp path] (15.447,9.430)--(15.267,9.430);
+\node[gp node right] at (2.240,9.430) {$1.96\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,10.252)--(15.447,10.252);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.252)--(2.604,10.252);
+\draw[gp path] (15.447,10.252)--(15.267,10.252);
+\node[gp node right] at (2.240,10.252) {$1.98\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -133,7 +145,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -150,62 +162,74 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.595,2.025)--(4.595,11.075);
+\draw[gp path] (4.284,2.025)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.595,2.025)--(4.595,1.845);
-\draw[gp path] (4.595,11.075)--(4.595,11.255);
-\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\draw[gp path] (4.284,2.025)--(4.284,1.845);
+\draw[gp path] (4.284,11.075)--(4.284,11.255);
+\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.765,2.025)--(6.765,11.075);
+\draw[gp path] (6.145,2.025)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.765,2.025)--(6.765,1.845);
-\draw[gp path] (6.765,11.075)--(6.765,11.255);
-\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\draw[gp path] (6.145,2.025)--(6.145,1.845);
+\draw[gp path] (6.145,11.075)--(6.145,11.255);
+\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.936,2.025)--(8.936,11.075);
+\draw[gp path] (8.005,2.025)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,2.025)--(8.936,1.845);
-\draw[gp path] (8.936,11.075)--(8.936,11.255);
-\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\draw[gp path] (8.005,2.025)--(8.005,1.845);
+\draw[gp path] (8.005,11.075)--(8.005,11.255);
+\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.106,2.025)--(11.106,11.075);
+\draw[gp path] (9.866,2.025)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.106,2.025)--(11.106,1.845);
-\draw[gp path] (11.106,11.075)--(11.106,11.255);
-\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\draw[gp path] (9.866,2.025)--(9.866,1.845);
+\draw[gp path] (9.866,11.075)--(9.866,11.255);
+\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.277,2.025)--(13.277,11.075);
+\draw[gp path] (11.726,2.025)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.277,2.025)--(13.277,1.845);
-\draw[gp path] (13.277,11.075)--(13.277,11.255);
-\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\draw[gp path] (11.726,2.025)--(11.726,1.845);
+\draw[gp path] (11.726,11.075)--(11.726,11.255);
+\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.587,2.025)--(13.587,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.587,2.025)--(13.587,1.845);
+\draw[gp path] (13.587,11.075)--(13.587,11.255);
+\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -217,80 +241,79 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,2.025)--(15.447,1.845);
 \draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
 \draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.123)--(2.424,9.914)--(2.424,9.852)--(2.424,9.831)--(2.424,9.786)%
-  --(2.424,9.737)--(2.424,9.686)--(2.424,9.642)--(2.424,9.641)--(2.467,9.630)--(2.467,9.566)%
-  --(2.467,9.563)--(2.467,9.557)--(2.467,9.493)--(2.467,9.446)--(2.467,9.442)--(2.511,9.426)%
-  --(2.511,9.402)--(2.511,9.384)--(2.511,9.302)--(2.511,9.274)--(2.511,9.254)--(2.511,9.245)%
-  --(2.554,9.209)--(2.554,9.193)--(2.554,9.178)--(2.554,9.169)--(2.554,9.140)--(2.554,9.133)%
-  --(2.598,9.129)--(2.598,9.115)--(2.598,9.112)--(2.598,9.080)--(2.598,9.030)--(2.641,9.008)%
-  --(2.641,8.950)--(2.641,8.854)--(2.641,8.826)--(2.641,8.783)--(2.684,8.764)--(2.684,8.723)%
-  --(2.684,8.698)--(2.684,8.688)--(2.684,8.678)--(2.728,8.617)--(2.728,8.614)--(2.728,8.605)%
-  --(2.728,8.589)--(2.771,8.584)--(2.771,8.531)--(2.815,8.477)--(2.815,8.456)--(2.815,8.452)%
-  --(2.815,8.358)--(2.815,8.332)--(2.815,8.323)--(2.858,8.313)--(2.858,8.298)--(2.902,8.284)%
-  --(2.902,8.277)--(2.945,8.259)--(2.988,8.247)--(2.988,8.245)--(2.988,8.239)--(3.032,8.227)%
-  --(3.075,8.224)--(3.075,8.221)--(3.119,8.215)--(3.119,8.213)--(3.119,8.188)--(3.162,8.177)%
-  --(3.162,8.175)--(3.162,8.172)--(3.205,8.168)--(3.292,8.163)--(3.336,8.162)--(3.336,8.160)%
-  --(3.379,8.158)--(3.379,8.153)--(3.422,8.150)--(3.466,8.143)--(3.553,8.139)--(3.639,8.132)%
-  --(3.639,8.129)--(3.683,8.128)--(3.683,8.123)--(3.726,8.121)--(3.770,8.114)--(3.857,8.112)%
-  --(3.857,8.103)--(3.900,8.099)--(3.943,8.094)--(3.943,8.090)--(4.074,8.085)--(4.117,8.078)%
-  --(4.117,8.075)--(4.160,8.073)--(4.160,8.071)--(4.334,8.066)--(4.421,8.065)--(4.421,8.058)%
-  --(4.464,8.042)--(4.464,8.037)--(4.508,8.034)--(4.595,8.032)--(4.595,8.022)--(4.638,8.019)%
-  --(4.681,8.015)--(4.768,8.013)--(4.768,8.006)--(4.855,8.006)--(4.942,7.992)--(5.072,7.981)%
-  --(5.072,7.978)--(5.202,7.975)--(5.246,7.972)--(5.289,7.967)--(5.332,7.958)--(5.376,7.956)%
-  --(5.506,7.951)--(5.506,7.947)--(5.550,7.947)--(5.593,7.944)--(5.636,7.944)--(5.680,7.941)%
-  --(5.810,7.937)--(5.897,7.936)--(5.984,7.932)--(6.027,7.929)--(6.114,7.928)--(6.157,7.927)%
-  --(6.287,7.926)--(6.287,7.925)--(6.374,7.924)--(6.374,7.916)--(6.505,5.162)--(6.505,4.968)%
-  --(6.505,4.789)--(6.548,4.733)--(6.548,4.693)--(6.548,4.655)--(6.548,4.536)--(6.548,4.496)%
-  --(6.548,4.465)--(6.548,4.234)--(6.548,4.200)--(6.591,4.174)--(6.591,4.165)--(6.591,4.150)%
-  --(6.591,4.138)--(6.591,4.103)--(6.591,4.069)--(6.591,4.044)--(6.591,4.034)--(6.591,4.008)%
-  --(6.635,3.980)--(6.635,3.843)--(6.635,3.822)--(6.635,3.814)--(6.635,3.808)--(6.635,3.794)%
-  --(6.678,3.664)--(6.678,3.650)--(6.678,3.633)--(6.678,3.619)--(6.678,3.610)--(6.678,3.454)%
-  --(6.722,3.454)--(6.722,3.437)--(6.722,3.435)--(6.722,3.430)--(6.722,3.257)--(6.722,3.256)%
-  --(6.722,3.161)--(6.722,3.152)--(6.765,3.150)--(6.765,3.136)--(6.765,2.831)--(6.765,2.823)%
-  --(6.765,2.816)--(6.808,2.805)--(6.808,2.802)--(6.808,2.787)--(6.808,2.784)--(6.808,2.781)%
-  --(6.808,2.776)--(6.852,2.654)--(6.852,2.653)--(6.852,2.651)--(6.852,2.639)--(6.895,2.637)%
-  --(6.895,2.634)--(6.895,2.623)--(6.895,2.609)--(6.939,2.598)--(6.939,2.593)--(6.939,2.581)%
-  --(6.982,2.574)--(6.982,2.559)--(6.982,2.558)--(7.069,2.556)--(7.112,2.550)--(7.112,2.547)%
-  --(7.156,2.543)--(7.156,2.538)--(7.199,2.536)--(7.199,2.532)--(7.199,2.530)--(7.243,2.525)%
-  --(7.243,2.521)--(7.243,2.517)--(7.286,2.516)--(7.243,2.512)--(7.286,2.512)--(7.286,2.492)%
-  --(7.286,2.483)--(7.329,2.483)--(7.329,2.479)--(7.329,2.470)--(7.329,2.467)--(7.373,2.459)%
-  --(7.373,2.453)--(7.373,2.440)--(7.416,2.308)--(7.460,2.302)--(7.460,2.296)--(7.503,2.294)%
-  --(7.546,2.285)--(7.546,2.276)--(7.546,2.272)--(7.590,2.267)--(7.633,2.255)--(7.677,2.254)%
-  --(7.677,2.252)--(7.720,2.250)--(7.720,2.249)--(7.807,2.245)--(7.894,2.243)--(8.024,2.236)%
-  --(8.024,2.227)--(8.111,2.222)--(8.198,2.222)--(8.284,2.220)--(8.328,2.212)--(8.328,2.210)%
-  --(8.371,2.199)--(8.415,2.197)--(8.458,2.197)--(8.501,2.195)--(8.675,2.191)--(8.762,2.191)%
-  --(8.892,2.188)--(8.936,2.184)--(8.979,2.184)--(9.066,2.182)--(9.109,2.179)--(9.153,2.179)%
-  --(9.196,2.178)--(9.196,2.172)--(9.196,2.164)--(9.239,2.160)--(9.326,2.157)--(9.370,2.155)%
-  --(9.413,2.153)--(9.413,2.152)--(9.413,2.148)--(9.413,2.141)--(9.500,2.139)--(9.543,2.137)%
-  --(9.587,2.135)--(9.630,2.133)--(9.673,2.132)--(9.673,2.122)--(9.891,2.117)--(9.977,2.116)%
-  --(10.151,2.114)--(10.151,2.112)--(10.194,2.110)--(10.281,2.109)--(10.325,2.107)--(10.498,2.107)%
-  --(10.542,2.105)--(10.542,2.101)--(10.802,6.618)--(10.802,6.507)--(10.802,6.326)--(10.802,6.185)%
-  --(10.802,5.976)--(10.802,5.899)--(10.846,5.851)--(10.846,5.761)--(10.846,5.701)--(10.846,5.670)%
-  --(10.846,5.567)--(10.846,5.510)--(10.889,5.493)--(10.889,5.471)--(10.889,5.444)--(10.889,5.429)%
-  --(10.889,5.409)--(10.889,5.396)--(10.932,5.373)--(10.932,5.306)--(10.932,5.267)--(10.932,5.265)%
-  --(10.932,5.256)--(10.932,5.249)--(10.976,5.225)--(10.976,5.214)--(10.976,5.196)--(11.019,5.192)%
-  --(11.019,5.185)--(11.019,5.163)--(11.063,5.140)--(11.063,5.108)--(11.063,5.100)--(11.063,5.079)%
-  --(11.106,5.064)--(11.106,5.054)--(11.106,5.043)--(11.106,5.023)--(11.106,5.020)--(11.149,5.004)%
-  --(11.149,4.981)--(11.149,4.972)--(11.193,4.967)--(11.193,4.955)--(11.236,4.955)--(11.236,4.953)%
-  --(11.280,4.944)--(11.280,4.941)--(11.323,4.939)--(11.323,4.921)--(11.323,4.911)--(11.323,4.909)%
-  --(11.366,4.909)--(11.366,4.908)--(11.366,4.907)--(11.410,4.902)--(11.366,4.891)--(11.410,4.890)%
-  --(11.410,4.886)--(11.453,4.876)--(11.497,4.864)--(11.584,4.857)--(11.627,4.838)--(11.627,4.830)%
-  --(11.627,4.824)--(11.714,4.819)--(11.757,4.814)--(11.757,4.802)--(11.757,4.792)--(11.801,4.790)%
-  --(11.844,4.774)--(11.887,4.768)--(11.931,4.749)--(11.931,4.748)--(11.974,4.743)--(11.974,4.742)%
-  --(12.018,4.741)--(12.018,4.739)--(12.018,4.737)--(12.061,4.719)--(12.104,4.715)--(12.104,4.708)%
-  --(12.148,4.703)--(12.148,4.701)--(12.191,4.696)--(12.191,4.684)--(12.278,4.680)--(12.365,4.676)%
-  --(12.408,4.676)--(12.408,4.674)--(12.452,4.672)--(12.539,4.671)--(12.539,4.670)--(12.539,4.668)%
-  --(12.539,4.661)--(12.539,4.652)--(12.625,4.645)--(12.669,4.641)--(12.756,4.631)--(12.886,4.628)%
-  --(12.929,4.626)--(12.973,4.621)--(13.016,4.619)--(13.016,4.615)--(13.059,4.615)--(13.059,4.606)%
-  --(13.059,4.603)--(13.103,4.597)--(13.146,4.593)--(13.190,4.591)--(13.233,4.584)--(13.277,4.579)%
-  --(13.407,4.577)--(13.450,4.575)--(13.537,4.570)--(13.580,4.569)--(13.711,4.568)--(13.884,4.563)%
-  --(14.014,4.563)--(14.014,4.562)--(14.232,4.560)--(14.449,4.558)--(14.492,4.558)--(14.492,4.557)%
-  --(14.535,4.555)--(14.622,4.555)--(14.666,4.552)--(14.666,4.551)--(14.796,4.547)--(15.056,4.541)%
-  --(15.056,10.583)--(15.056,10.516)--(15.056,10.412);
+\draw[gp path] (2.424,10.053)--(2.424,9.985)--(2.461,9.935)--(2.461,9.873)--(2.461,9.838)%
+  --(2.461,9.796)--(2.461,9.778)--(2.498,9.747)--(2.498,9.708)--(2.498,9.688)--(2.498,9.577)%
+  --(2.498,9.539)--(2.536,9.482)--(2.536,9.468)--(2.536,9.451)--(2.536,9.444)--(2.536,9.429)%
+  --(2.573,9.409)--(2.573,9.327)--(2.573,9.282)--(2.610,9.252)--(2.610,9.231)--(2.610,9.222)%
+  --(2.610,9.212)--(2.647,9.204)--(2.684,9.150)--(2.684,9.121)--(2.684,9.102)--(2.684,9.091)%
+  --(2.684,9.086)--(2.684,9.072)--(2.722,9.064)--(2.722,9.052)--(2.722,9.051)--(2.759,9.039)%
+  --(2.759,9.037)--(2.759,9.011)--(2.759,8.974)--(2.796,8.960)--(2.796,8.914)--(2.796,8.880)%
+  --(2.833,8.870)--(2.833,8.865)--(2.833,8.861)--(2.871,8.850)--(2.908,8.844)--(2.908,8.843)%
+  --(2.908,8.836)--(2.908,8.828)--(2.945,8.826)--(2.945,8.807)--(2.945,8.795)--(2.982,8.742)%
+  --(2.982,8.736)--(2.982,8.729)--(2.982,8.705)--(2.982,8.694)--(2.982,8.684)--(3.019,8.683)%
+  --(3.019,8.681)--(3.057,8.673)--(3.057,8.662)--(3.094,8.661)--(3.131,8.634)--(3.131,8.630)%
+  --(3.131,8.628)--(3.131,8.623)--(3.168,8.619)--(3.205,8.606)--(3.205,8.598)--(3.243,8.596)%
+  --(3.243,8.579)--(3.280,8.566)--(3.280,8.560)--(3.317,8.556)--(3.317,8.553)--(3.317,8.548)%
+  --(3.354,8.536)--(3.354,8.530)--(3.354,8.517)--(3.354,8.511)--(3.391,8.509)--(3.391,8.477)%
+  --(3.391,8.466)--(3.429,8.455)--(3.466,8.442)--(3.466,8.438)--(3.503,8.432)--(3.540,8.431)%
+  --(3.577,8.428)--(3.615,8.419)--(3.652,8.417)--(3.652,8.415)--(3.689,8.404)--(3.689,8.397)%
+  --(3.726,8.396)--(3.764,8.395)--(3.764,8.394)--(3.801,8.391)--(3.838,8.387)--(3.875,8.386)%
+  --(3.912,8.372)--(3.950,8.362)--(3.987,8.355)--(3.987,8.350)--(4.024,8.340)--(4.024,8.338)%
+  --(4.024,8.332)--(4.061,8.322)--(4.061,8.317)--(4.098,8.315)--(4.136,8.305)--(4.136,8.298)%
+  --(4.210,8.294)--(4.210,8.293)--(4.210,8.292)--(4.210,8.289)--(4.247,8.276)--(4.322,8.264)%
+  --(4.322,8.261)--(4.359,8.259)--(4.359,8.249)--(4.396,8.242)--(4.508,8.234)--(4.545,8.228)%
+  --(4.545,8.226)--(4.619,8.208)--(4.731,8.206)--(4.843,8.200)--(4.843,8.192)--(5.029,8.188)%
+  --(5.326,8.185)--(5.438,8.184)--(5.550,8.177)--(5.624,8.174)--(5.884,8.115)--(5.922,5.628)%
+  --(5.959,5.568)--(5.959,5.431)--(5.959,5.338)--(5.959,5.314)--(5.959,5.289)--(5.959,5.274)%
+  --(5.996,5.225)--(5.996,5.110)--(5.996,5.098)--(5.996,4.650)--(5.996,4.628)--(6.033,4.596)%
+  --(6.033,4.558)--(6.033,4.262)--(6.033,4.245)--(6.033,4.227)--(6.033,4.217)--(6.070,4.182)%
+  --(6.070,4.171)--(6.070,4.159)--(6.070,4.150)--(6.070,4.142)--(6.108,4.134)--(6.108,3.993)%
+  --(6.108,3.977)--(6.108,3.889)--(6.108,3.876)--(6.145,3.772)--(6.145,3.760)--(6.182,3.758)%
+  --(6.182,3.742)--(6.182,3.584)--(6.219,3.583)--(6.219,3.572)--(6.219,3.549)--(6.219,3.545)%
+  --(6.256,3.540)--(6.256,3.519)--(6.256,3.492)--(6.256,3.305)--(6.294,3.291)--(6.294,3.267)%
+  --(6.294,3.254)--(6.331,3.120)--(6.331,2.991)--(6.331,2.987)--(6.368,2.980)--(6.368,2.977)%
+  --(6.405,2.975)--(6.405,2.965)--(6.443,2.854)--(6.443,2.852)--(6.480,2.814)--(6.480,2.801)%
+  --(6.480,2.798)--(6.517,2.796)--(6.517,2.790)--(6.517,2.787)--(6.554,2.779)--(6.554,2.773)%
+  --(6.591,2.772)--(6.629,2.771)--(6.629,2.762)--(6.629,2.761)--(6.666,2.752)--(6.629,2.751)%
+  --(6.666,2.749)--(6.703,2.748)--(6.703,2.736)--(6.740,2.731)--(6.740,2.730)--(6.740,2.720)%
+  --(6.740,2.719)--(6.777,2.718)--(6.777,2.717)--(6.777,2.710)--(6.815,2.705)--(6.815,2.526)%
+  --(6.852,2.525)--(6.889,2.521)--(6.889,2.517)--(6.926,2.509)--(6.926,2.508)--(6.963,2.505)%
+  --(6.963,2.502)--(7.075,2.497)--(7.075,2.492)--(7.149,2.491)--(7.187,2.490)--(7.187,2.487)%
+  --(7.261,2.482)--(7.298,2.482)--(7.336,2.479)--(7.373,2.475)--(7.410,2.466)--(7.410,2.465)%
+  --(7.484,2.463)--(7.484,2.461)--(7.522,2.456)--(7.559,2.412)--(7.559,2.406)--(7.633,2.405)%
+  --(7.670,2.404)--(7.708,2.399)--(7.708,2.393)--(7.745,2.388)--(7.819,2.388)--(7.856,2.386)%
+  --(7.894,2.381)--(7.931,2.380)--(8.042,2.372)--(8.042,2.361)--(8.080,2.356)--(8.191,2.354)%
+  --(8.191,2.349)--(8.191,2.344)--(8.229,2.342)--(8.266,2.339)--(8.303,2.333)--(8.340,2.330)%
+  --(8.452,2.330)--(8.563,2.329)--(8.749,2.325)--(8.749,2.319)--(8.787,2.316)--(8.787,2.307)%
+  --(8.824,2.301)--(8.824,2.295)--(8.898,2.292)--(8.936,2.291)--(8.973,2.290)--(9.010,2.290)%
+  --(9.010,2.289)--(9.047,2.286)--(9.084,2.286)--(9.122,2.286)--(9.159,2.282)--(9.159,2.281)%
+  --(9.159,2.280)--(9.159,2.271)--(9.196,2.268)--(9.233,2.265)--(9.233,2.259)--(9.270,2.257)%
+  --(9.382,2.257)--(9.419,2.255)--(9.419,2.251)--(9.494,2.249)--(9.531,2.247)--(9.568,6.389)%
+  --(9.605,6.282)--(9.605,6.184)--(9.605,6.073)--(9.605,5.980)--(9.605,5.897)--(9.642,5.839)%
+  --(9.642,5.791)--(9.642,5.711)--(9.680,5.622)--(9.680,5.610)--(9.680,5.564)--(9.680,5.533)%
+  --(9.717,5.510)--(9.717,5.481)--(9.717,5.467)--(9.717,5.434)--(9.717,5.413)--(9.717,5.371)%
+  --(9.754,5.361)--(9.754,5.344)--(9.754,5.314)--(9.791,5.299)--(9.791,5.289)--(9.791,5.257)%
+  --(9.829,5.208)--(9.829,5.187)--(9.866,5.175)--(9.866,5.157)--(9.866,5.111)--(9.866,5.106)%
+  --(9.866,5.098)--(9.903,5.093)--(9.903,5.067)--(9.940,5.051)--(9.940,5.048)--(9.977,5.047)%
+  --(9.977,5.031)--(9.977,5.024)--(9.977,5.013)--(10.015,5.010)--(10.015,4.998)--(10.052,4.984)%
+  --(10.052,4.977)--(10.089,4.975)--(10.089,4.965)--(10.126,4.962)--(10.126,4.958)--(10.163,4.952)%
+  --(10.275,4.936)--(10.349,4.922)--(10.349,4.919)--(10.387,4.883)--(10.387,4.878)--(10.424,4.876)%
+  --(10.424,4.866)--(10.461,4.865)--(10.461,4.857)--(10.498,4.856)--(10.535,4.840)--(10.684,4.839)%
+  --(10.684,4.832)--(10.759,4.832)--(10.945,4.818)--(11.019,4.817)--(11.019,4.812)--(11.056,4.812)%
+  --(11.131,4.811)--(11.131,4.806)--(11.131,4.792)--(11.168,4.785)--(11.168,4.784)--(11.205,4.777)%
+  --(11.205,4.765)--(11.242,4.759)--(11.280,4.757)--(11.317,4.757)--(11.317,4.752)--(11.317,4.729)%
+  --(11.354,4.726)--(11.428,4.724)--(11.428,4.719)--(11.466,4.716)--(11.577,4.712)--(11.615,4.711)%
+  --(11.652,4.710)--(11.689,4.709)--(11.763,4.709)--(11.801,4.700)--(11.801,4.697)--(11.838,4.688)%
+  --(11.875,4.687)--(11.987,4.685)--(11.987,4.678)--(12.098,4.674)--(12.321,4.669)--(12.359,4.647)%
+  --(12.359,4.637)--(12.508,4.629)--(12.508,4.627)--(12.508,4.625)--(12.880,4.625)--(13.066,4.623)%
+  --(13.103,4.622)--(13.140,4.619)--(13.252,10.338)--(13.252,10.231)--(13.252,10.166)--(13.252,10.104)%
+  --(13.252,10.045)--(13.289,10.008)--(13.289,9.971)--(13.289,9.912)--(13.289,9.862)--(13.289,9.819)%
+  --(13.326,9.763)--(13.401,9.723)--(13.512,9.715)--(13.624,9.709)--(13.735,9.695)--(13.810,9.689)%
+  --(13.884,9.685)--(14.145,9.679)--(15.335,9.669);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
