--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -53,6 +53,7 @@
 %% \usepackage{amsthm}
 
 \input{../../tex/definitions.tex}
+\input{../../styles/colors.tex}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
