--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 02 Dec 2024 08:17:11 PM UTC
+%% Wed 04 Dec 2024 06:11:47 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -13,103 +13,127 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,2.025)--(2.604,2.025);
 \draw[gp path] (15.447,2.025)--(15.267,2.025);
-\node[gp node right] at (2.240,2.025) {$1.8\times10^{11}$};
+\node[gp node right] at (2.240,2.025) {$1.78\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.031)--(15.447,3.031);
+\draw[gp path] (2.424,2.848)--(15.447,2.848);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.031)--(2.604,3.031);
-\draw[gp path] (15.447,3.031)--(15.267,3.031);
-\node[gp node right] at (2.240,3.031) {$1.82\times10^{11}$};
+\draw[gp path] (2.424,2.848)--(2.604,2.848);
+\draw[gp path] (15.447,2.848)--(15.267,2.848);
+\node[gp node right] at (2.240,2.848) {$1.8\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.036)--(15.447,4.036);
+\draw[gp path] (2.424,3.670)--(15.447,3.670);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.036)--(2.604,4.036);
-\draw[gp path] (15.447,4.036)--(15.267,4.036);
-\node[gp node right] at (2.240,4.036) {$1.84\times10^{11}$};
+\draw[gp path] (2.424,3.670)--(2.604,3.670);
+\draw[gp path] (15.447,3.670)--(15.267,3.670);
+\node[gp node right] at (2.240,3.670) {$1.82\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.042)--(15.447,5.042);
+\draw[gp path] (2.424,4.493)--(15.447,4.493);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.042)--(2.604,5.042);
-\draw[gp path] (15.447,5.042)--(15.267,5.042);
-\node[gp node right] at (2.240,5.042) {$1.86\times10^{11}$};
+\draw[gp path] (2.424,4.493)--(2.604,4.493);
+\draw[gp path] (15.447,4.493)--(15.267,4.493);
+\node[gp node right] at (2.240,4.493) {$1.84\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.047)--(15.447,6.047);
+\draw[gp path] (2.424,5.316)--(15.447,5.316);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.047)--(2.604,6.047);
-\draw[gp path] (15.447,6.047)--(15.267,6.047);
-\node[gp node right] at (2.240,6.047) {$1.88\times10^{11}$};
+\draw[gp path] (2.424,5.316)--(2.604,5.316);
+\draw[gp path] (15.447,5.316)--(15.267,5.316);
+\node[gp node right] at (2.240,5.316) {$1.86\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.053)--(15.447,7.053);
+\draw[gp path] (2.424,6.139)--(15.447,6.139);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.053)--(2.604,7.053);
-\draw[gp path] (15.447,7.053)--(15.267,7.053);
-\node[gp node right] at (2.240,7.053) {$1.9\times10^{11}$};
+\draw[gp path] (2.424,6.139)--(2.604,6.139);
+\draw[gp path] (15.447,6.139)--(15.267,6.139);
+\node[gp node right] at (2.240,6.139) {$1.88\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.058)--(15.447,8.058);
+\draw[gp path] (2.424,6.961)--(15.447,6.961);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.058)--(2.604,8.058);
-\draw[gp path] (15.447,8.058)--(15.267,8.058);
-\node[gp node right] at (2.240,8.058) {$1.92\times10^{11}$};
+\draw[gp path] (2.424,6.961)--(2.604,6.961);
+\draw[gp path] (15.447,6.961)--(15.267,6.961);
+\node[gp node right] at (2.240,6.961) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.064)--(15.447,9.064);
+\draw[gp path] (2.424,7.784)--(15.447,7.784);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.064)--(2.604,9.064);
-\draw[gp path] (15.447,9.064)--(15.267,9.064);
-\node[gp node right] at (2.240,9.064) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,7.784)--(2.604,7.784);
+\draw[gp path] (15.447,7.784)--(15.267,7.784);
+\node[gp node right] at (2.240,7.784) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.069)--(15.447,10.069);
+\draw[gp path] (2.424,8.607)--(15.447,8.607);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.069)--(2.604,10.069);
-\draw[gp path] (15.447,10.069)--(15.267,10.069);
-\node[gp node right] at (2.240,10.069) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,8.607)--(2.604,8.607);
+\draw[gp path] (15.447,8.607)--(15.267,8.607);
+\node[gp node right] at (2.240,8.607) {$1.94\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,9.430)--(15.447,9.430);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.430)--(2.604,9.430);
+\draw[gp path] (15.447,9.430)--(15.267,9.430);
+\node[gp node right] at (2.240,9.430) {$1.96\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,10.252)--(15.447,10.252);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.252)--(2.604,10.252);
+\draw[gp path] (15.447,10.252)--(15.267,10.252);
+\node[gp node right] at (2.240,10.252) {$1.98\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -121,7 +145,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -138,62 +162,74 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.595,2.025)--(4.595,11.075);
+\draw[gp path] (4.284,2.025)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.595,2.025)--(4.595,1.845);
-\draw[gp path] (4.595,11.075)--(4.595,11.255);
-\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\draw[gp path] (4.284,2.025)--(4.284,1.845);
+\draw[gp path] (4.284,11.075)--(4.284,11.255);
+\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.765,2.025)--(6.765,11.075);
+\draw[gp path] (6.145,2.025)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.765,2.025)--(6.765,1.845);
-\draw[gp path] (6.765,11.075)--(6.765,11.255);
-\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\draw[gp path] (6.145,2.025)--(6.145,1.845);
+\draw[gp path] (6.145,11.075)--(6.145,11.255);
+\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.936,2.025)--(8.936,11.075);
+\draw[gp path] (8.005,2.025)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,2.025)--(8.936,1.845);
-\draw[gp path] (8.936,11.075)--(8.936,11.255);
-\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\draw[gp path] (8.005,2.025)--(8.005,1.845);
+\draw[gp path] (8.005,11.075)--(8.005,11.255);
+\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.106,2.025)--(11.106,11.075);
+\draw[gp path] (9.866,2.025)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.106,2.025)--(11.106,1.845);
-\draw[gp path] (11.106,11.075)--(11.106,11.255);
-\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\draw[gp path] (9.866,2.025)--(9.866,1.845);
+\draw[gp path] (9.866,11.075)--(9.866,11.255);
+\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.277,2.025)--(13.277,11.075);
+\draw[gp path] (11.726,2.025)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.277,2.025)--(13.277,1.845);
-\draw[gp path] (13.277,11.075)--(13.277,11.255);
-\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\draw[gp path] (11.726,2.025)--(11.726,1.845);
+\draw[gp path] (11.726,11.075)--(11.726,11.255);
+\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.587,2.025)--(13.587,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.587,2.025)--(13.587,1.845);
+\draw[gp path] (13.587,11.075)--(13.587,11.255);
+\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -205,60 +241,70 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,2.025)--(15.447,1.845);
 \draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
 \draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.181)--(2.424,9.983)--(2.424,9.939)--(2.424,9.769)--(2.467,9.709)%
-  --(2.467,9.652)--(2.467,9.595)--(2.467,9.554)--(2.467,9.493)--(2.467,9.439)--(2.467,9.424)%
-  --(2.511,9.362)--(2.511,9.360)--(2.511,9.345)--(2.511,9.318)--(2.511,9.274)--(2.511,9.231)%
-  --(2.511,9.177)--(2.511,9.135)--(2.511,9.116)--(2.511,9.085)--(2.511,9.019)--(2.554,8.981)%
-  --(2.554,8.980)--(2.554,8.929)--(2.554,8.897)--(2.554,8.892)--(2.554,8.808)--(2.598,8.796)%
-  --(2.598,8.784)--(2.598,8.780)--(2.598,8.776)--(2.598,8.754)--(2.641,8.752)--(2.641,8.730)%
-  --(2.641,8.688)--(2.641,8.675)--(2.641,8.668)--(2.684,8.631)--(2.684,8.626)--(2.684,8.624)%
-  --(2.684,8.602)--(2.728,8.598)--(2.728,8.592)--(2.728,8.587)--(2.728,8.563)--(2.771,8.555)%
-  --(2.771,8.520)--(2.771,8.519)--(2.771,8.492)--(2.815,8.486)--(2.815,8.475)--(2.815,8.395)%
-  --(2.858,8.374)--(2.858,8.373)--(2.902,8.344)--(2.902,8.331)--(2.902,8.321)--(2.902,8.320)%
-  --(2.945,8.282)--(2.945,8.272)--(2.945,8.269)--(2.945,8.263)--(2.945,8.241)--(2.945,8.238)%
-  --(2.988,8.231)--(3.032,8.226)--(3.075,8.210)--(3.075,8.191)--(3.075,8.181)--(3.075,8.171)%
-  --(3.119,8.147)--(3.119,8.139)--(3.119,8.127)--(3.162,8.127)--(3.205,8.126)--(3.205,8.124)%
-  --(3.205,8.113)--(3.205,8.101)--(3.205,8.084)--(3.292,8.080)--(3.292,8.061)--(3.336,8.047)%
-  --(3.336,8.044)--(3.336,8.037)--(3.379,8.030)--(3.379,8.024)--(3.379,8.015)--(3.379,8.011)%
-  --(3.422,7.981)--(3.422,7.968)--(3.509,7.939)--(3.553,7.937)--(3.553,7.934)--(3.596,7.925)%
-  --(3.596,7.924)--(3.639,7.914)--(3.683,7.906)--(3.726,7.896)--(3.726,7.892)--(3.770,7.887)%
-  --(3.770,7.877)--(3.857,7.876)--(3.943,7.870)--(3.943,7.868)--(3.943,7.866)--(3.987,7.864)%
-  --(4.074,7.863)--(4.204,7.858)--(4.247,7.855)--(4.334,7.851)--(4.421,7.844)--(4.421,7.838)%
-  --(4.681,7.831)--(4.725,7.816)--(4.812,7.813)--(4.812,7.812)--(4.855,7.811)--(4.985,7.806)%
-  --(5.029,7.801)--(5.072,7.796)--(5.202,7.792)--(5.246,7.791)--(5.289,7.776)--(5.419,7.766)%
-  --(5.550,7.764)--(5.767,7.759)--(5.767,7.750)--(5.853,7.748)--(5.897,7.743)--(5.984,7.740)%
-  --(5.984,7.725)--(6.114,7.723)--(6.114,7.714)--(6.157,7.714)--(6.287,7.713)--(6.374,7.704)%
-  --(6.505,10.866)--(6.505,10.827)--(6.548,10.803)--(6.548,10.796)--(6.765,10.786)--(6.808,10.767)%
-  --(6.808,10.748)--(6.895,10.743)--(7.243,10.737)--(7.286,10.734)--(7.329,10.731)--(7.416,10.730)%
-  --(7.633,10.722)--(8.067,10.699)--(8.284,10.695)--(8.892,10.683)--(9.109,10.683)--(10.759,7.640)%
-  --(10.759,7.491)--(10.759,7.401)--(10.759,7.335)--(10.759,7.314)--(10.802,7.253)--(10.802,7.230)%
-  --(10.802,7.194)--(10.802,7.141)--(10.802,7.123)--(10.802,6.929)--(10.802,6.866)--(10.802,6.849)%
-  --(10.846,6.726)--(10.846,6.711)--(10.846,6.706)--(10.846,6.662)--(10.846,6.506)--(10.889,6.444)%
-  --(10.889,6.430)--(10.889,6.420)--(10.889,6.233)--(10.889,6.209)--(10.889,6.198)--(10.932,6.151)%
-  --(10.932,5.987)--(10.932,5.964)--(10.932,5.945)--(10.976,5.917)--(10.976,5.804)--(10.976,5.802)%
-  --(10.976,5.800)--(10.976,5.769)--(10.976,5.649)--(11.019,5.635)--(11.019,5.633)--(11.019,5.628)%
-  --(11.019,5.615)--(11.063,5.611)--(11.063,5.593)--(11.063,5.591)--(11.063,5.564)--(11.063,5.553)%
-  --(11.106,5.537)--(11.106,5.519)--(11.106,5.508)--(11.106,5.495)--(11.193,5.495)--(11.193,5.480)%
-  --(11.193,5.462)--(11.193,5.416)--(11.236,5.404)--(11.236,5.399)--(11.280,5.397)--(11.280,5.377)%
-  --(11.280,5.351)--(11.280,5.341)--(11.280,5.339)--(11.323,5.339)--(11.323,5.331)--(11.366,5.297)%
-  --(11.410,5.290)--(11.453,5.277)--(11.497,5.268)--(11.497,5.248)--(11.497,5.245)--(11.540,5.241)%
-  --(11.584,5.237)--(11.584,5.209)--(11.627,5.201)--(11.670,5.195)--(11.714,5.193)--(11.714,5.191)%
-  --(11.757,5.152)--(11.757,5.145)--(11.757,5.139)--(11.757,5.138)--(11.757,5.134)--(11.844,5.096)%
-  --(11.844,5.093)--(11.887,5.089)--(11.887,5.081)--(11.931,5.074)--(12.018,5.070)--(12.018,5.067)%
-  --(12.018,5.065)--(12.018,5.060)--(12.061,4.937)--(12.061,4.917)--(12.061,4.912)--(12.104,4.904)%
-  --(12.104,4.901)--(12.104,4.883)--(12.148,4.881)--(12.191,4.877)--(12.365,4.874)--(12.365,4.858)%
-  --(12.495,4.848)--(12.495,4.839)--(12.539,4.830)--(12.625,4.799)--(12.625,4.798)--(12.625,4.797)%
-  --(12.669,4.786)--(12.799,4.778)--(12.842,4.775)--(12.842,4.761)--(12.886,4.760)--(12.973,4.756)%
-  --(13.016,4.754)--(13.059,4.753)--(13.059,4.751)--(13.103,4.742)--(13.103,4.735)--(13.103,4.733)%
-  --(13.146,4.727)--(13.146,4.724)--(13.146,4.723)--(13.190,4.711)--(13.190,4.697)--(13.190,4.696)%
-  --(13.233,4.677)--(13.277,4.664)--(13.277,4.652)--(13.363,4.648)--(13.494,4.648)--(13.494,4.647)%
-  --(13.494,4.644)--(13.537,4.643)--(13.580,4.640)--(13.580,4.631)--(13.624,4.622)--(13.667,4.610)%
-  --(13.754,4.606)--(13.754,4.599)--(13.928,4.595)--(14.014,4.593)--(14.449,4.592)--(14.709,4.592)%
-  --(14.839,4.589)--(15.013,2.740)--(15.013,2.713)--(15.013,2.697)--(15.056,2.688);
+\draw[gp path] (2.424,10.267)--(2.424,10.232)--(2.424,10.189)--(2.424,10.161)--(2.461,9.990)%
+  --(2.461,9.970)--(2.461,9.917)--(2.461,9.814)--(2.461,9.770)--(2.498,9.743)--(2.498,9.723)%
+  --(2.498,9.719)--(2.498,9.708)--(2.498,9.672)--(2.536,9.615)--(2.536,9.595)--(2.536,9.540)%
+  --(2.536,9.490)--(2.573,9.476)--(2.573,9.313)--(2.573,9.255)--(2.573,9.254)--(2.610,9.227)%
+  --(2.610,9.213)--(2.610,9.190)--(2.610,9.162)--(2.610,9.121)--(2.647,9.105)--(2.647,9.096)%
+  --(2.647,9.079)--(2.647,9.074)--(2.647,9.058)--(2.684,9.033)--(2.684,8.907)--(2.684,8.895)%
+  --(2.722,8.893)--(2.722,8.866)--(2.722,8.853)--(2.722,8.832)--(2.722,8.812)--(2.722,8.781)%
+  --(2.722,8.750)--(2.759,8.729)--(2.759,8.700)--(2.759,8.697)--(2.759,8.670)--(2.796,8.653)%
+  --(2.796,8.645)--(2.796,8.637)--(2.796,8.609)--(2.833,8.608)--(2.833,8.605)--(2.833,8.590)%
+  --(2.833,8.574)--(2.871,8.555)--(2.871,8.548)--(2.871,8.538)--(2.871,8.535)--(2.871,8.532)%
+  --(2.908,8.525)--(2.908,8.515)--(2.908,8.504)--(2.908,8.482)--(2.945,8.470)--(2.945,8.454)%
+  --(2.945,8.437)--(2.982,8.421)--(2.982,8.398)--(2.982,8.381)--(2.982,8.378)--(2.982,8.373)%
+  --(3.019,8.373)--(3.019,8.366)--(3.057,8.354)--(3.057,8.343)--(3.057,8.333)--(3.094,8.328)%
+  --(3.094,8.306)--(3.094,8.296)--(3.131,8.290)--(3.131,8.280)--(3.168,8.279)--(3.168,8.277)%
+  --(3.168,8.263)--(3.243,8.244)--(3.280,8.233)--(3.280,8.163)--(3.280,8.154)--(3.317,8.147)%
+  --(3.354,8.134)--(3.466,8.131)--(3.503,8.127)--(3.503,8.117)--(3.503,8.115)--(3.503,8.113)%
+  --(3.540,8.112)--(3.577,8.109)--(3.577,8.092)--(3.615,8.084)--(3.615,8.072)--(3.577,8.066)%
+  --(3.726,8.054)--(3.726,8.052)--(3.838,8.049)--(3.838,8.037)--(3.875,8.034)--(3.912,8.024)%
+  --(3.912,8.020)--(3.987,8.020)--(3.987,8.016)--(4.024,8.011)--(4.061,8.002)--(4.098,7.998)%
+  --(4.136,7.997)--(4.173,7.988)--(4.247,7.988)--(4.284,7.980)--(4.359,7.978)--(4.396,7.975)%
+  --(4.545,7.974)--(4.657,7.971)--(4.731,7.970)--(4.768,7.962)--(4.880,7.958)--(5.103,7.955)%
+  --(5.215,7.949)--(5.289,7.948)--(5.363,7.937)--(5.438,7.932)--(5.438,7.931)--(5.550,7.931)%
+  --(5.773,7.919)--(5.847,7.916)--(5.847,7.914)--(5.884,7.913)--(5.959,10.547)--(5.959,10.521)%
+  --(5.922,10.481)--(5.996,10.477)--(6.033,10.431)--(6.070,10.419)--(6.182,10.408)--(6.256,10.396)%
+  --(7.298,10.386)--(7.447,10.382)--(8.787,10.381)--(8.824,10.378)--(9.568,7.838)--(9.568,7.801)%
+  --(9.568,7.761)--(9.568,7.675)--(9.568,7.644)--(9.605,7.574)--(9.605,7.496)--(9.605,7.339)%
+  --(9.605,7.277)--(9.605,7.270)--(9.642,7.229)--(9.642,7.219)--(9.642,7.184)--(9.642,7.131)%
+  --(9.642,7.106)--(9.642,7.037)--(9.680,7.035)--(9.680,7.021)--(9.680,6.996)--(9.680,6.983)%
+  --(9.680,6.968)--(9.717,6.964)--(9.717,6.918)--(9.717,6.891)--(9.717,6.886)--(9.717,6.871)%
+  --(9.717,6.853)--(9.754,6.844)--(9.754,6.837)--(9.754,6.805)--(9.791,6.803)--(9.791,6.699)%
+  --(9.791,6.689)--(9.829,6.674)--(9.829,6.636)--(9.829,6.618)--(9.829,6.617)--(9.829,6.612)%
+  --(9.866,6.584)--(9.866,6.578)--(9.866,6.570)--(9.866,6.543)--(9.903,6.529)--(9.940,6.518)%
+  --(9.940,6.390)--(9.977,6.320)--(9.977,6.304)--(10.015,6.302)--(10.052,6.292)--(10.052,6.286)%
+  --(10.052,6.274)--(10.089,6.271)--(10.089,6.267)--(10.089,6.265)--(10.126,6.254)--(10.126,6.252)%
+  --(10.126,6.245)--(10.163,6.245)--(10.163,6.232)--(10.163,6.226)--(10.163,6.224)--(10.201,6.222)%
+  --(10.238,6.200)--(10.238,6.195)--(10.238,6.194)--(10.238,6.182)--(10.275,6.170)--(10.275,6.166)%
+  --(10.275,6.058)--(10.312,6.038)--(10.387,5.915)--(10.424,5.909)--(10.424,5.906)--(10.424,5.896)%
+  --(10.498,5.893)--(10.498,5.879)--(10.498,5.878)--(10.535,5.877)--(10.535,5.873)--(10.573,5.870)%
+  --(10.610,5.862)--(10.610,5.844)--(10.610,5.843)--(10.647,5.840)--(10.759,5.840)--(10.759,5.833)%
+  --(10.796,5.833)--(10.870,5.830)--(10.870,5.806)--(10.870,5.727)--(10.908,5.720)--(10.945,5.715)%
+  --(10.945,5.712)--(10.945,5.707)--(11.056,5.705)--(11.056,5.691)--(11.094,5.687)--(11.094,5.683)%
+  --(11.131,5.677)--(11.168,5.676)--(11.242,5.671)--(11.317,5.655)--(11.391,5.649)--(11.391,5.645)%
+  --(11.615,5.642)--(11.763,5.642)--(11.801,5.641)--(11.801,5.636)--(11.801,5.631)--(11.801,5.622)%
+  --(11.838,5.613)--(11.912,5.610)--(11.912,5.609)--(12.024,5.603)--(12.061,5.602)--(12.210,5.602)%
+  --(12.247,5.595)--(12.284,5.593)--(12.284,5.591)--(12.396,5.583)--(12.433,5.582)--(12.470,5.580)%
+  --(12.582,5.578)--(12.619,5.575)--(12.619,5.571)--(12.656,5.567)--(12.656,5.565)--(12.694,5.562)%
+  --(12.805,5.558)--(12.805,5.555)--(12.842,5.552)--(12.954,5.551)--(13.066,5.549)--(13.103,5.546)%
+  --(13.214,4.085)--(13.214,4.065)--(13.214,4.038)--(13.252,4.023)--(13.252,3.876)--(13.252,3.850)%
+  --(13.252,3.847)--(13.252,3.833)--(13.289,3.527)--(13.289,3.497)--(13.289,3.485)--(13.289,3.476)%
+  --(13.289,3.464)--(13.289,3.455)--(13.326,3.450)--(13.326,3.430)--(13.326,3.409)--(13.326,3.399)%
+  --(13.363,3.386)--(13.363,3.376)--(13.363,3.372)--(13.363,3.367)--(13.363,3.357)--(13.401,3.226)%
+  --(13.401,3.219)--(13.438,3.217)--(13.438,3.213)--(13.438,3.206)--(13.475,3.205)--(13.475,3.198)%
+  --(13.475,3.177)--(13.512,3.174)--(13.512,3.129)--(13.512,3.123)--(13.512,3.113)--(13.549,3.097)%
+  --(13.549,3.094)--(13.549,3.083)--(13.587,3.077)--(13.587,3.076)--(13.624,2.958)--(13.624,2.798)%
+  --(13.698,2.791)--(13.773,2.789)--(13.773,2.786)--(13.810,2.782)--(13.847,2.780)--(13.884,2.778)%
+  --(13.921,2.777)--(13.996,2.772)--(13.996,2.770)--(14.033,2.770)--(14.107,2.768)--(14.219,2.768)%
+  --(14.256,2.766)--(14.256,2.761)--(14.256,2.750)--(14.368,2.747)--(14.405,2.745)--(14.442,2.744)%
+  --(14.591,2.740)--(14.628,2.739)--(14.666,2.732)--(14.666,2.730)--(14.740,2.730)--(14.777,2.727)%
+  --(14.889,2.725)--(14.889,2.721)--(14.926,2.612)--(15.112,2.607)--(15.149,2.606)--(15.149,2.604)%
+  --(15.224,2.599)--(15.335,2.594)--(15.373,2.593);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
