--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,139 +1,79 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 04 Dec 2024 06:11:47 PM UTC
+%% Fri 06 Dec 2024 09:54:07 AM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(15.447,2.025);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.604,2.025);
-\draw[gp path] (15.447,2.025)--(15.267,2.025);
-\node[gp node right] at (2.240,2.025) {$1.78\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.86\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.848)--(15.447,2.848);
+\draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.848)--(2.604,2.848);
-\draw[gp path] (15.447,2.848)--(15.267,2.848);
-\node[gp node right] at (2.240,2.848) {$1.8\times10^{11}$};
+\draw[gp path] (2.424,3.383)--(2.604,3.383);
+\draw[gp path] (15.447,3.383)--(15.267,3.383);
+\node[gp node right] at (2.240,3.383) {$1.88\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.670)--(15.447,3.670);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.670)--(2.604,3.670);
-\draw[gp path] (15.447,3.670)--(15.267,3.670);
-\node[gp node right] at (2.240,3.670) {$1.82\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.493)--(15.447,4.493);
+\draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.493)--(2.604,4.493);
-\draw[gp path] (15.447,4.493)--(15.267,4.493);
-\node[gp node right] at (2.240,4.493) {$1.84\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\draw[gp path] (15.447,6.460)--(15.267,6.460);
+\node[gp node right] at (2.240,6.460) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.316)--(15.447,5.316);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.316)--(2.604,5.316);
-\draw[gp path] (15.447,5.316)--(15.267,5.316);
-\node[gp node right] at (2.240,5.316) {$1.86\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.139)--(15.447,6.139);
+\draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.139)--(2.604,6.139);
-\draw[gp path] (15.447,6.139)--(15.267,6.139);
-\node[gp node right] at (2.240,6.139) {$1.88\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.961)--(15.447,6.961);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.961)--(2.604,6.961);
-\draw[gp path] (15.447,6.961)--(15.267,6.961);
-\node[gp node right] at (2.240,6.961) {$1.9\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.784)--(15.447,7.784);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.784)--(2.604,7.784);
-\draw[gp path] (15.447,7.784)--(15.267,7.784);
-\node[gp node right] at (2.240,7.784) {$1.92\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.607)--(15.447,8.607);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.607)--(2.604,8.607);
-\draw[gp path] (15.447,8.607)--(15.267,8.607);
-\node[gp node right] at (2.240,8.607) {$1.94\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.430)--(15.447,9.430);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.430)--(2.604,9.430);
-\draw[gp path] (15.447,9.430)--(15.267,9.430);
-\node[gp node right] at (2.240,9.430) {$1.96\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.252)--(15.447,10.252);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.252)--(2.604,10.252);
-\draw[gp path] (15.447,10.252)--(15.267,10.252);
-\node[gp node right] at (2.240,10.252) {$1.98\times10^{11}$};
+\draw[gp path] (2.424,9.537)--(2.604,9.537);
+\draw[gp path] (15.447,9.537)--(15.267,9.537);
+\node[gp node right] at (2.240,9.537) {$1.96\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -145,173 +85,167 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.424,1.845);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,2.025)--(4.284,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,2.025)--(4.284,1.845);
-\draw[gp path] (4.284,11.075)--(4.284,11.255);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,2.025)--(6.145,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,2.025)--(6.145,1.845);
-\draw[gp path] (6.145,11.075)--(6.145,11.255);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,2.025)--(8.005,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,2.025)--(8.005,1.845);
-\draw[gp path] (8.005,11.075)--(8.005,11.255);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,2.025)--(9.866,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,2.025)--(9.866,1.845);
-\draw[gp path] (9.866,11.075)--(9.866,11.255);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,2.025)--(11.726,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,2.025)--(11.726,1.845);
-\draw[gp path] (11.726,11.075)--(11.726,11.255);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,2.025)--(13.587,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,2.025)--(13.587,1.845);
-\draw[gp path] (13.587,11.075)--(13.587,11.255);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,2.025)--(15.447,1.845);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,11.075)--(15.447,10.895);
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.267)--(2.424,10.232)--(2.424,10.189)--(2.424,10.161)--(2.461,9.990)%
-  --(2.461,9.970)--(2.461,9.917)--(2.461,9.814)--(2.461,9.770)--(2.498,9.743)--(2.498,9.723)%
-  --(2.498,9.719)--(2.498,9.708)--(2.498,9.672)--(2.536,9.615)--(2.536,9.595)--(2.536,9.540)%
-  --(2.536,9.490)--(2.573,9.476)--(2.573,9.313)--(2.573,9.255)--(2.573,9.254)--(2.610,9.227)%
-  --(2.610,9.213)--(2.610,9.190)--(2.610,9.162)--(2.610,9.121)--(2.647,9.105)--(2.647,9.096)%
-  --(2.647,9.079)--(2.647,9.074)--(2.647,9.058)--(2.684,9.033)--(2.684,8.907)--(2.684,8.895)%
-  --(2.722,8.893)--(2.722,8.866)--(2.722,8.853)--(2.722,8.832)--(2.722,8.812)--(2.722,8.781)%
-  --(2.722,8.750)--(2.759,8.729)--(2.759,8.700)--(2.759,8.697)--(2.759,8.670)--(2.796,8.653)%
-  --(2.796,8.645)--(2.796,8.637)--(2.796,8.609)--(2.833,8.608)--(2.833,8.605)--(2.833,8.590)%
-  --(2.833,8.574)--(2.871,8.555)--(2.871,8.548)--(2.871,8.538)--(2.871,8.535)--(2.871,8.532)%
-  --(2.908,8.525)--(2.908,8.515)--(2.908,8.504)--(2.908,8.482)--(2.945,8.470)--(2.945,8.454)%
-  --(2.945,8.437)--(2.982,8.421)--(2.982,8.398)--(2.982,8.381)--(2.982,8.378)--(2.982,8.373)%
-  --(3.019,8.373)--(3.019,8.366)--(3.057,8.354)--(3.057,8.343)--(3.057,8.333)--(3.094,8.328)%
-  --(3.094,8.306)--(3.094,8.296)--(3.131,8.290)--(3.131,8.280)--(3.168,8.279)--(3.168,8.277)%
-  --(3.168,8.263)--(3.243,8.244)--(3.280,8.233)--(3.280,8.163)--(3.280,8.154)--(3.317,8.147)%
-  --(3.354,8.134)--(3.466,8.131)--(3.503,8.127)--(3.503,8.117)--(3.503,8.115)--(3.503,8.113)%
-  --(3.540,8.112)--(3.577,8.109)--(3.577,8.092)--(3.615,8.084)--(3.615,8.072)--(3.577,8.066)%
-  --(3.726,8.054)--(3.726,8.052)--(3.838,8.049)--(3.838,8.037)--(3.875,8.034)--(3.912,8.024)%
-  --(3.912,8.020)--(3.987,8.020)--(3.987,8.016)--(4.024,8.011)--(4.061,8.002)--(4.098,7.998)%
-  --(4.136,7.997)--(4.173,7.988)--(4.247,7.988)--(4.284,7.980)--(4.359,7.978)--(4.396,7.975)%
-  --(4.545,7.974)--(4.657,7.971)--(4.731,7.970)--(4.768,7.962)--(4.880,7.958)--(5.103,7.955)%
-  --(5.215,7.949)--(5.289,7.948)--(5.363,7.937)--(5.438,7.932)--(5.438,7.931)--(5.550,7.931)%
-  --(5.773,7.919)--(5.847,7.916)--(5.847,7.914)--(5.884,7.913)--(5.959,10.547)--(5.959,10.521)%
-  --(5.922,10.481)--(5.996,10.477)--(6.033,10.431)--(6.070,10.419)--(6.182,10.408)--(6.256,10.396)%
-  --(7.298,10.386)--(7.447,10.382)--(8.787,10.381)--(8.824,10.378)--(9.568,7.838)--(9.568,7.801)%
-  --(9.568,7.761)--(9.568,7.675)--(9.568,7.644)--(9.605,7.574)--(9.605,7.496)--(9.605,7.339)%
-  --(9.605,7.277)--(9.605,7.270)--(9.642,7.229)--(9.642,7.219)--(9.642,7.184)--(9.642,7.131)%
-  --(9.642,7.106)--(9.642,7.037)--(9.680,7.035)--(9.680,7.021)--(9.680,6.996)--(9.680,6.983)%
-  --(9.680,6.968)--(9.717,6.964)--(9.717,6.918)--(9.717,6.891)--(9.717,6.886)--(9.717,6.871)%
-  --(9.717,6.853)--(9.754,6.844)--(9.754,6.837)--(9.754,6.805)--(9.791,6.803)--(9.791,6.699)%
-  --(9.791,6.689)--(9.829,6.674)--(9.829,6.636)--(9.829,6.618)--(9.829,6.617)--(9.829,6.612)%
-  --(9.866,6.584)--(9.866,6.578)--(9.866,6.570)--(9.866,6.543)--(9.903,6.529)--(9.940,6.518)%
-  --(9.940,6.390)--(9.977,6.320)--(9.977,6.304)--(10.015,6.302)--(10.052,6.292)--(10.052,6.286)%
-  --(10.052,6.274)--(10.089,6.271)--(10.089,6.267)--(10.089,6.265)--(10.126,6.254)--(10.126,6.252)%
-  --(10.126,6.245)--(10.163,6.245)--(10.163,6.232)--(10.163,6.226)--(10.163,6.224)--(10.201,6.222)%
-  --(10.238,6.200)--(10.238,6.195)--(10.238,6.194)--(10.238,6.182)--(10.275,6.170)--(10.275,6.166)%
-  --(10.275,6.058)--(10.312,6.038)--(10.387,5.915)--(10.424,5.909)--(10.424,5.906)--(10.424,5.896)%
-  --(10.498,5.893)--(10.498,5.879)--(10.498,5.878)--(10.535,5.877)--(10.535,5.873)--(10.573,5.870)%
-  --(10.610,5.862)--(10.610,5.844)--(10.610,5.843)--(10.647,5.840)--(10.759,5.840)--(10.759,5.833)%
-  --(10.796,5.833)--(10.870,5.830)--(10.870,5.806)--(10.870,5.727)--(10.908,5.720)--(10.945,5.715)%
-  --(10.945,5.712)--(10.945,5.707)--(11.056,5.705)--(11.056,5.691)--(11.094,5.687)--(11.094,5.683)%
-  --(11.131,5.677)--(11.168,5.676)--(11.242,5.671)--(11.317,5.655)--(11.391,5.649)--(11.391,5.645)%
-  --(11.615,5.642)--(11.763,5.642)--(11.801,5.641)--(11.801,5.636)--(11.801,5.631)--(11.801,5.622)%
-  --(11.838,5.613)--(11.912,5.610)--(11.912,5.609)--(12.024,5.603)--(12.061,5.602)--(12.210,5.602)%
-  --(12.247,5.595)--(12.284,5.593)--(12.284,5.591)--(12.396,5.583)--(12.433,5.582)--(12.470,5.580)%
-  --(12.582,5.578)--(12.619,5.575)--(12.619,5.571)--(12.656,5.567)--(12.656,5.565)--(12.694,5.562)%
-  --(12.805,5.558)--(12.805,5.555)--(12.842,5.552)--(12.954,5.551)--(13.066,5.549)--(13.103,5.546)%
-  --(13.214,4.085)--(13.214,4.065)--(13.214,4.038)--(13.252,4.023)--(13.252,3.876)--(13.252,3.850)%
-  --(13.252,3.847)--(13.252,3.833)--(13.289,3.527)--(13.289,3.497)--(13.289,3.485)--(13.289,3.476)%
-  --(13.289,3.464)--(13.289,3.455)--(13.326,3.450)--(13.326,3.430)--(13.326,3.409)--(13.326,3.399)%
-  --(13.363,3.386)--(13.363,3.376)--(13.363,3.372)--(13.363,3.367)--(13.363,3.357)--(13.401,3.226)%
-  --(13.401,3.219)--(13.438,3.217)--(13.438,3.213)--(13.438,3.206)--(13.475,3.205)--(13.475,3.198)%
-  --(13.475,3.177)--(13.512,3.174)--(13.512,3.129)--(13.512,3.123)--(13.512,3.113)--(13.549,3.097)%
-  --(13.549,3.094)--(13.549,3.083)--(13.587,3.077)--(13.587,3.076)--(13.624,2.958)--(13.624,2.798)%
-  --(13.698,2.791)--(13.773,2.789)--(13.773,2.786)--(13.810,2.782)--(13.847,2.780)--(13.884,2.778)%
-  --(13.921,2.777)--(13.996,2.772)--(13.996,2.770)--(14.033,2.770)--(14.107,2.768)--(14.219,2.768)%
-  --(14.256,2.766)--(14.256,2.761)--(14.256,2.750)--(14.368,2.747)--(14.405,2.745)--(14.442,2.744)%
-  --(14.591,2.740)--(14.628,2.739)--(14.666,2.732)--(14.666,2.730)--(14.740,2.730)--(14.777,2.727)%
-  --(14.889,2.725)--(14.889,2.721)--(14.926,2.612)--(15.112,2.607)--(15.149,2.606)--(15.149,2.604)%
-  --(15.224,2.599)--(15.335,2.594)--(15.373,2.593);
+\draw[gp path] (2.424,10.820)--(2.424,10.725)--(2.424,10.612)--(2.457,10.547)--(2.457,10.512)%
+  --(2.457,10.471)--(2.457,10.229)--(2.457,10.161)--(2.489,10.157)--(2.489,10.070)--(2.489,9.900)%
+  --(2.489,9.898)--(2.489,9.770)--(2.489,9.609)--(2.489,9.549)--(2.522,9.542)--(2.522,9.523)%
+  --(2.522,9.503)--(2.522,9.473)--(2.522,9.439)--(2.554,9.404)--(2.554,9.289)--(2.554,9.267)%
+  --(2.554,9.210)--(2.554,9.204)--(2.587,9.198)--(2.587,9.148)--(2.587,9.075)--(2.587,8.967)%
+  --(2.587,8.953)--(2.619,8.917)--(2.619,8.706)--(2.619,8.679)--(2.619,8.650)--(2.652,8.634)%
+  --(2.652,8.591)--(2.652,8.549)--(2.652,8.522)--(2.652,8.485)--(2.684,8.484)--(2.684,8.444)%
+  --(2.684,8.417)--(2.717,8.387)--(2.717,8.366)--(2.717,8.320)--(2.750,8.316)--(2.750,8.288)%
+  --(2.750,8.278)--(2.750,8.182)--(2.782,8.133)--(2.782,8.113)--(2.815,8.109)--(2.815,8.076)%
+  --(2.815,8.070)--(2.847,8.061)--(2.880,8.054)--(2.912,8.023)--(2.912,7.990)--(2.912,7.986)%
+  --(2.912,7.983)--(2.912,7.975)--(2.945,7.954)--(2.945,7.933)--(2.945,7.929)--(2.945,7.910)%
+  --(2.977,7.886)--(2.977,7.739)--(3.010,7.711)--(3.043,7.701)--(3.043,7.695)--(3.075,7.620)%
+  --(3.108,7.620)--(3.140,7.578)--(3.238,7.568)--(3.303,7.547)--(3.303,7.545)--(3.336,7.544)%
+  --(3.336,7.535)--(3.368,7.534)--(3.401,7.516)--(3.401,7.515)--(3.433,7.511)--(3.466,7.504)%
+  --(3.531,7.481)--(3.564,7.481)--(3.564,7.463)--(3.596,7.451)--(3.596,7.431)--(3.629,7.413)%
+  --(3.629,7.407)--(3.661,7.403)--(3.726,7.394)--(3.726,7.381)--(3.759,7.378)--(3.759,7.369)%
+  --(3.759,7.351)--(3.824,7.329)--(3.857,7.312)--(3.987,7.302)--(3.987,7.275)--(4.019,7.266)%
+  --(4.052,7.264)--(4.150,7.250)--(4.215,7.218)--(4.312,7.202)--(4.345,7.202)--(4.410,7.194)%
+  --(4.410,7.188)--(4.475,7.181)--(4.508,7.173)--(4.573,7.161)--(4.768,7.157)--(4.801,7.154)%
+  --(4.833,7.147)--(4.898,7.140)--(4.931,7.140)--(4.963,7.134)--(4.963,7.128)--(4.996,7.122)%
+  --(5.061,7.116)--(5.061,7.115)--(5.094,7.111)--(5.094,7.101)--(5.354,7.093)--(5.387,7.092)%
+  --(5.550,7.090)--(5.550,7.087)--(5.550,7.082)--(5.647,5.163)--(5.647,5.078)--(5.647,5.039)%
+  --(5.647,5.017)--(5.680,4.961)--(5.680,4.917)--(5.680,4.638)--(5.680,4.576)--(5.680,4.530)%
+  --(5.680,4.499)--(5.712,4.470)--(5.712,4.447)--(5.712,4.444)--(5.745,4.430)--(5.745,4.427)%
+  --(5.745,4.393)--(5.777,4.372)--(5.777,4.356)--(5.777,4.344)--(5.777,4.324)--(5.777,4.297)%
+  --(5.810,4.066)--(5.810,4.063)--(5.810,4.059)--(5.810,3.887)--(5.843,3.872)--(5.875,3.573)%
+  --(5.875,3.566)--(5.875,3.558)--(5.875,3.324)--(5.908,3.318)--(5.973,3.301)--(6.005,3.132)%
+  --(6.070,3.122)--(6.070,3.116)--(6.103,3.106)--(6.136,3.098)--(6.136,2.947)--(6.168,2.945)%
+  --(6.201,2.939)--(6.233,2.927)--(6.233,2.922)--(6.266,2.913)--(6.266,2.899)--(6.266,2.885)%
+  --(6.266,2.870)--(6.298,2.858)--(6.331,2.849)--(6.363,2.842)--(6.363,2.837)--(6.396,2.827)%
+  --(6.429,2.796)--(6.494,2.789)--(6.526,2.786)--(6.559,2.778)--(6.559,2.771)--(6.559,2.755)%
+  --(6.689,2.751)--(6.689,2.629)--(6.689,2.619)--(6.787,2.612)--(6.819,2.609)--(7.015,2.607)%
+  --(7.047,2.605)--(7.080,2.602)--(7.177,2.598)--(7.275,2.592)--(7.308,2.590)--(7.340,2.587)%
+  --(7.373,2.416)--(7.601,2.405)--(7.666,2.400)--(7.991,2.389)--(8.089,2.386)--(8.089,2.380)%
+  --(8.187,2.375)--(8.284,2.374)--(8.317,2.372)--(8.349,2.364)--(8.382,2.360)--(8.415,2.334)%
+  --(8.415,2.331)--(8.480,2.321)--(8.577,2.321)--(8.610,2.318)--(8.740,2.292)--(8.740,2.287)%
+  --(8.870,2.282)--(8.903,2.282)--(8.936,2.277)--(9.131,2.274)--(9.261,2.265)--(9.359,2.262)%
+  --(9.522,2.256)--(9.684,2.254)--(9.815,2.248)--(9.945,2.233)--(9.977,2.231)--(10.010,2.224)%
+  --(10.042,2.220)--(10.075,2.219)--(10.173,2.215)--(10.238,2.208)--(10.335,2.207)--(10.335,2.202)%
+  --(10.401,2.195)--(11.052,2.189)--(11.182,2.187)--(11.247,2.183)--(11.247,2.178)--(11.996,2.171)%
+  --(12.159,2.171)--(12.647,2.168)--(12.647,2.166)--(12.680,2.159)--(13.038,2.153)--(13.396,2.147)%
+  --(13.721,2.144)--(13.949,2.140);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
 \node[gp node center] at (8.935,0.215) {Relative time [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
